# CDIO

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
codec/: adpcm_16kbps_test.m  adpcm_test.m
codec/FPGA_DE1/: 2bitcounter.vhd  addressing_sram.vhd  adpcm_inv_quantizer.vhd  adpcm_quantizer.vhd  butterfly_r2_II_complete.vhd  butterfly_r2_I_complete.vhd  class_d_counter.vhd  generic_bit_counter.vhd  pwm_comparator.vhd  twiddle_multiplier.vhd
codec/FPGA_DE1/adpcm/: adpcm_adapt.vhd  adpcm_quantizer.vhd
codec/FPGA_DE1/fft/: CDIO_test_fft64.vhd  VAD_calc_energy.vhd  butterfly_r2_I.vhd  complex_mux.vhd  data_from_mcu.vhd  fft_64_point.vhd  fft_abs_value.vhd  fft_sdf_switch.vhd  fft_twiddle_controller.vhd  fft_twiddle_lut.vhd  fft_twiddle_multiplier.vhd  fft_twiddle_multiplier_v2.vhd  generic_bit_counter.vhd  genericbitcounter.vhd  radix2_BFI.vhd  radix2_BFII.vhd  send_to_master.vhd  twiddle_multiplier.vhd
codec/FPGA_DE1/vad/: VAD_calc_energy.vhd
codec/MATLAB/: adpcm_test.m  apcm_24kbps_test.m
codec/VHDL_DE1/: adpcm_adapt.vhd  clk_divider.vhd  ones_complement_conv.vhd  ten_bit_counter.vhd
docs/: iq.xlsx  projektgrupp6_kravspec.docx  projektgrupp6_projektplan.docx  projektgrupp6_tidsplan.xlsx
fw/: README.md  fpga_interface.md  radio_protocol.md
fw/ice/: .gitignore  CMakeLists.txt  README.md  microphone_pdm_counter.vhd  pin_config.pcf  timing_constraints.sdc  top.vhd
fw/ice/adpcm/: CDIO_test_adpcm.vhd  adpcm_adapt.vhd  adpcm_complete.vhd  adpcm_inv_quantizer.vhd  adpcm_mux.vhd  adpcm_quantizer.vhd
fw/ice/audio/: audio_pkg.vhd  mixer.vhd
fw/ice/cdio/: cdio_sbt.project  cdio_syn.prj  synlog.tcl  top_prim.v
fw/ice/class d/: pwm_comparator.vhd
fw/ice/dds/: dds_core.vhd  dds_nco.vhd  dds_pkg.vhd  dds_testbench.vhd  dds_wav.vhd
fw/ice/fft/: CDIO_test_fft64.vhd  butterfly_r2_II.vhd  fft_64_point.vhd  fft_abs_value.vhd  fft_twiddle_controller_W0.vhd  fft_twiddle_controller_W1.vhd  fft_twiddle_lut.vhd  fft_twiddle_multiplier_mac16.vhd  fft_twiddle_multiplier_old.vhd  generic_bit_counter.vhd  generic_delay_line.vhd  multiplier_mac16.vhd  radix2_BFI.vhd  radix2_BFII.vhd  send_to_master.vhd  twiddle_controller_old.vhd  twiddle_multiplier.vhd
fw/ice/ram/: fifo_generic.vhd  ram_generic.vhd
fw/ice/spi/: CMakeLists.txt  spi_reg.vhd  spi_testbench.vhd
fw/ice/test_bench/: CDIO_test_fft64.vhd  send_to_master.vhd
fw/ice/top_blinky/: cdio_lse.prj  cdio_sbt.project  cdio_syn.prj  top.vhd  top_prim.v  top_temp_lse.sdc
fw/ice/vad/: VAD_calc_energy.vhd  VAD_dominant_frequency.vhd  VAD_tresh.vhd
fw/mcu/: .gitignore  README.md
fw/mcu/src/: CMakeLists.txt  config.dts  dumb_delay.h  gdb.cmake  main.c  pins.h
fw/mcu/src/fpga/: CMakeLists.txt  fpga.c  fpga.h  fpga_config.c  fpga_config.h
fw/mcu/src/radio/: CMakeLists.txt  README.md  spirit1.c  spirit1.h
fw/mcu/src/radio/SPIRIT1_Library/Inc/: SPIRIT_Types.h
fw/mcu/src/radio/SPIRIT1_Library/Src/: SPIRIT_Radio.c  SPIRIT_Types.c
fw/mcu/src/radio/SPIRIT1_Util/Inc/: SPIRIT1_Util.h
fw/mcu/src/radio/SPIRIT1_Util/Src/: SPIRIT1_Util.c
hw/: cdio.DsnWrk
hw/board/: .gitignore  README.md  audio.Harness  audio.SchDoc  board.BomDoc  board.PcbDoc  board.PcbLib  board.PrjPCB  board.PrjPCBStructure  board.PrjPCBVariants  bom.xls  bom_europe.xls  cover.SchDoc  fpga.Harness  fpga.SchDoc  make_commit.OutJob  make_manufacture.OutJob  mcu.Harness  mcu.SchDoc  mcu_fpga.SchDoc  power.SchDoc  radio.Harness  radio.SchDoc
hw/board/gerbers/: .gitignore  board.G1  board.G2  board.GBL  board.GBO  board.GBP  board.GBS  board.GKO  board.GTL  board.GTO  board.GTP  board.GTS  board.TXT
